# study-newman-computational-physics

./: .gitignore  Cargo.toml  README.md
src/ch05/: ch05_example03.rs  ch05_exercise02.rs  ch05_exercise03.rs  ch05_exercise04.rs  ch05_exercise05.ipynb  ch05_exercise06.rs  ch05_exercise07.rs  ch05_exercise08.rs  ch05_exercise09.rs  ch05_exercise10.ipynb  ch05_exercise10.rs  ch05_exercise11.rs  ch05_exercise12.ipynb  ch05_exercise12.rs  ch05_exercise13.rs  ch05_exercise14.ipynb
src/utils/: integrate_simpsons_rule.rs  mod.rs
src/utils/integrate/: integrate_gaussian_quadrature.rs  integrate_simpsons_rule.rs  integrate_trapazoidal_rule.rs  integrate_trapezoidal_rule.rs  mod.rs
