[package]
name = "rust-newman-computational-physics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ch05_exercise02"
path = "src/ch05/ch05_exercise02.rs"

[[bin]]
name = "ch05_exercise03"
path = "src/ch05/ch05_exercise03.rs"

[[bin]]
name = "ch05_exercise04"
path = "src/ch05/ch05_exercise04.rs"

[[bin]]
name = "ch05_exercise06"
path = "src/ch05/ch05_exercise06.rs"

[[bin]]
name = "ch05_exercise07"
path = "src/ch05/ch05_exercise07.rs"

[[bin]]
name = "ch05_exercise08"
path = "src/ch05/ch05_exercise08.rs"

[[bin]]
name = "ch05_exercise09"
path = "src/ch05/ch05_exercise09.rs"

[dependencies]
ndarray = "0.16.1"
plotters = "0.3.7"
textplots = "0.8.6"
